--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <header>
+      <div class="logo">
+        <img src="Logo.png" alt="Tacco Gamez">
+      </div>
         <ul class="topnav">
           <li>
             <a href="#Home">Home</a>
